# LinuxCommandsOnWindows

./: Cargo.toml  README.md  RELEASES.MD  RELEASES.md
src/: error.rs  lib.rs  main.rs
src/__internals/: mod.rs
src/man/: README.md  mod.rs
src/model/: graphicscard.rs  hostsystem.rs  memory.rs  mod.rs  motherboard.rs  names.rs  os.rs  processor.rs  processorusage.rs  screenres.rs  storage.rs  uptime.rs  winntkernel.rs
src/pwd/: mod.rs
src/utils/: mod.rs
src/whoami/: README.md  mod.rs
src/winfetch/: README.md  mod.rs
src/winfetch/__internals/: mod.rs
src/winfetch/model/: graphicscard.rs  hostsystem.rs  memory.rs  mod.rs  motherboard.rs  names.rs  os.rs  processor.rs  processorusage.rs  screenres.rs  storage.rs  uptime.rs  winntkernel.rs
src/winfetch/utils/: mod.rs
