[package]
name = "linux-commands-on-windows"
version = "0.1.1"
edition = "2018"

# command versions
# whoami - 0.1.0
# winfetch - 0.1.0

[dependencies.chrono]
version = "0.4.19"

[dependencies.winapi]
version = "0.3.9"
features = [
    # shared
    "minwindef",
    "ntdef",
    "rpcdce",
    "windef",
    "winerror",
    "wtypesbase",
    "wtypes",

    # um
    "combaseapi",
    "oaidl",
    "objbase",
    "objidl",
    "oleauto",
    "sysinfoapi",
    "tlhelp32",
    "wbemcli",
    "winbase",
    "wingdi",
    "winnt",
    "winreg",
    "winuser"
]

[[bin]]
name = "whoami"
path = "src/whoami/bin/main.rs"

[[bin]]
name = "winfetch"
path = "src/winfetch/bin/main.rs"
