[package]
name = "linux-commands-on-windows"
version = "0.1.4"
edition = "2018"

# command versions
# man 0.1.1
# whoami - 0.1.1
# winfetch - 0.1.1

[dependencies.chrono]
version = "0.4.19"

[dependencies.winapi]
version = "0.3.9"
features = [
    # shared
    "minwindef",
    "ntdef",
    "rpcdce",
    "windef",
    "winerror",
    "wtypesbase",
    "wtypes",

    # um
    "combaseapi",
    "oaidl",
    "objbase",
    "objidl",
    "oleauto",
    "sysinfoapi",
    "tlhelp32",
    "wbemcli",
    "winbase",
    "wingdi",
    "winnt",
    "winreg",
    "winuser"
]

[[bin]]
name = "man"
path = "src/man/bin/main.rs"

[[bin]]
name = "whoami"
path = "src/whoami/bin/main.rs"

[[bin]]
name = "winfetch"
path = "src/winfetch/bin/main.rs"
