[package]
name = "linux-commands-on-windows"
version = "0.1.5"
edition = "2018"

# command versions
# man 0.1.1
# pwd 0.1.0
# whoami - 0.1.1
# winfetch - 0.1.1

[dependencies.chrono]
version = "0.4.19"

[dependencies.libc]
version = "0.2.95"

[dependencies.winapi]
version = "0.3.9"
features = [
    # shared
    "minwindef",
    "ntdef",
    "rpcdce",
    "windef",
    "winerror",
    "wtypesbase",
    "wtypes",

    # um
    "combaseapi",
    "oaidl",
    "objbase",
    "objidl",
    "oleauto",
    "sysinfoapi",
    "tlhelp32",
    "wbemcli",
    "winbase",
    "wingdi",
    "winnt",
    "winreg",
    "winuser"
]

[[bin]]
name = "man"
path = "src/man/bin/main.rs"

[[bin]]
name = "pwd"
path = "src/pwd/bin/main.rs"

[[bin]]
name = "whoami"
path = "src/whoami/bin/main.rs"

[[bin]]
name = "winfetch"
path = "src/winfetch/bin/main.rs"
